--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,9 @@
   --cl-cornflower: 231, 233, 252; /* #E7E9FC */
   --cl-cloud: 244, 244, 253; /* #F4F4FD */
   --cl-light-slate: 244, 244, 253;
+  --cl-light-grey: 142, 143, 15; /* #8e8f99 */
+  --cl-green: 49, 208, 170; /* 31d0aa */
+
 
   /* Others */
   --col-gap: 24px;
@@ -106,12 +109,13 @@ body {
   background-color: rgb(var(--cl-blue));
 }
 .social-icon {
-  fill: rgb(var(--cloud));
+  fill: rgb(var(--cl-cloud));
 }
 
 /* Header */
 .header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 6px rgba(46, 47, 66, 0.16);
 }
 
 .header .container {
@@ -147,14 +151,32 @@ body {
   font-size: 16px;
   font-weight: 500;
   padding: 24px 0;
-  color: rgb(var(--cl-navy-blue));
+  color: rgb(var(--cl-blue));
   display:block;
+  position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-nav-item {
 
 }
+header-nav-link::after {
+  content: "";
+  width: 100%;
+  height: 4px;
+  background-color: rgb(var(--cl-blue)));
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  border-radius: 2px;
+  transform: scaleX(0);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
+.header-nav-link:hover::after,
+.header-nav-link:focus::after {
+  transform: scaleX(1);
+}
 .header-nav-link:hover,
 .header-nav-link:focus {
   color: rgb(var(--cl-blue));
@@ -183,7 +205,7 @@ body {
 .hero {
   background-color: rgba(46, 47, 66, 0.7);
   background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-                     url("/images/background_people-office\ 1\ .jpg"); 
+                     url("/images/background_people-office.jpg"); 
   padding: 188px 0 188px;
   max-width: 1440px;
   background-repeat: no-repeat;
@@ -215,6 +237,7 @@ body {
   margin: 0 auto;
   height: 56px;
   min-width: 169px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn:hover,
@@ -257,7 +280,7 @@ body {
   justify-content: center;
   background-color: rgb(var(--cl-cloud));
   border-radius: 4px;
-  border: 1px solid rgb(var(--cl-light-slate));
+  border: 1px solid rgb(var(--cl-light-grey));
   margin-bottom: 8px;
 }
 
@@ -340,23 +363,33 @@ body {
 .portfolio-item {
   flex-basis: calc((100% - 48px) / 3);
   text-align: left;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-thumb {
+  position: relative;
+  overflow: hidden;
+}
+.portfolio-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: rgb(var(--cl-light));
+  padding: 40px 32px;
+  background-color: rgb(var(--cl-iris));
+  height: 100%;
+  width: 100%;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  padding: 40px 32px;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-item:hover {
   box-shadow: 0 1px 6px rgba(46, 47, 66, 0.08), 0 1px 1px rgba(46, 47, 66, 0.16), 0 2px 1px rgba(46, 47, 66, 0.08);
 }
 .portfolio-item:hover .portfolio-overlay {
   transform: translateY(0%);
-}
-.portfolio-overlay {
-  position: absolute;
-  top: 0;
-  color: rgb(var(--cloud));
-  padding: 40px 32px;
-  background-color: rgb(var(--iris));
-  height: 100%;
-  width: 100%;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-item-title {
   font-size: 20px;
@@ -380,15 +413,16 @@ body {
 
 /* Footer */
 .footer {
-  padding: 100px 0;
+  padding: 40px 0;
   background-color: rgb(var(--cl-navy-blue));
   text-align: left;
+  display: flex;
+  align-items: baseline;
 }
-
-.footer-text {
-  color: rgb(var(--cl-cloud));
-  max-width: 264px;
-
+.footer .container {
+  display: flex;
+  align-items: baseline;
+  margin-right: 120px; */
 }
 
 .logo-footer {
@@ -405,13 +439,44 @@ body {
 .logo-footer .cloud {
   color: rgb(var(--cl-cloud));
 }
+.footer-text {
+  color: rgb(var(--cl-cloud));
+  font-size: 16px;
+  line-height: 1.5;
+  color: rgb(var(--cl-cloud));
+  letter-spacing: 0.02em;
+}
+.footer-social-media {
+  display: flex;
+}
 .footer-social-media-title {
-  color: rgb(var(--cl-light));
+  color: rgb(var(--cl-cloud));
   font-size: 16px;
   font-weight: 500;
-  margin-bottom: 16pxж
-
+  margin-bottom: 16px;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
 }
-.footer-social-media-item {
-
+.social-media {
+  display: flex; 
+  gap: 16px; 
+  list-style: none;
+  padding: 0;
 }
+.social-media-item {
+  width: 40px;
+  height: 40px;
+}
+.social-media-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(var(--cl-iris)); 
+  border-radius: 50%; 
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-media-link:hover,
+.social-media-link:focus {
+  background-color: rgb(var(--cl-green));
