--- a/css/styles.css
+++ b/css/styles.css
@@ -109,13 +109,13 @@ body {
   background-color: rgb(var(--cl-blue));
 }
 .social-icon {
-  fill: rgb(var(--cl-cloud));
+  fill: #f4f4fd;
 }
 
 /* Header */
 .header {
   border-bottom: 1px solid #e7e9fc;
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 6px rgba(46, 47, 66, 0.16);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header .container {
@@ -151,7 +151,7 @@ body {
   font-size: 16px;
   font-weight: 500;
   padding: 24px 0;
-  color: rgb(var(--cl-blue));
+  color: #404bbf;
   display:block;
   position: relative;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -164,7 +164,7 @@ header-nav-link::after {
   content: "";
   width: 100%;
   height: 4px;
-  background-color: rgb(var(--cl-blue)));
+  background-color: rgb(var(--cl-blue));
   position: absolute;
   left: 0;
   bottom: -1px;
@@ -204,7 +204,7 @@ header-nav-link::after {
 /* Hero  */
 .hero {
   background-color: rgba(46, 47, 66, 0.7);
-  background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+  background-image: linear-gradient( rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
                      url("/images/background_people-office.jpg"); 
   padding: 188px 0 188px;
   max-width: 1440px;
@@ -242,7 +242,7 @@ header-nav-link::after {
 
 .btn:hover,
 .btn:focus {
-  background-color: rgb(var(--cl-blue));
+  background-color: #4d5ae5;
 }
 
 /* Values  */
@@ -422,7 +422,7 @@ header-nav-link::after {
 .footer .container {
   display: flex;
   align-items: baseline;
-  margin-right: 120px; */
+  margin-right: 120px; 
 }
 
 .logo-footer {
@@ -448,6 +448,7 @@ header-nav-link::after {
 }
 .footer-social-media {
   display: flex;
+  align-items: baseline;
 }
 .footer-social-media-title {
   color: rgb(var(--cl-cloud));
@@ -456,6 +457,7 @@ header-nav-link::after {
   margin-bottom: 16px;
   letter-spacing: 0.02em;
   margin-bottom: 16px;
+  line-height: 1.5;
 }
 .social-media {
   display: flex; 
