--- a/css/styles.css
+++ b/css/styles.css
@@ -436,6 +436,10 @@ body {
   margin-bottom: 16px;
   display: inline-block;
 }
+.footer-logo-text {
+  margin-right: 120px; 
+}
+
 
 .logo-footer .cloud {
   color: rgb(var(--cl-cloud));
@@ -447,12 +451,9 @@ body {
   color: rgb(var(--cl-cloud));
   letter-spacing: 0.02em;
 }
-.footer-social-media {
-  display: flex;
-  align-items: baseline;
-}
+
 .footer-social-media-title {
-  color: rgb(var(--cl-cloud));
+  color: rgb(var(--cl-light));
   font-size: 16px;
   font-weight: 500;
   margin-bottom: 16px;
@@ -466,11 +467,11 @@ body {
   list-style: none;
   padding: 0;
 }
-.social-media-item {
+.footer .social-media-item {
   width: 40px;
   height: 40px;
 }
-.social-media-link {
+.footer .social-media-link {
   display: flex;
   align-items: center;
   justify-content: center;
