fix for background pic & social media icons

--- a/css/styles.css
+++ b/css/styles.css
@@ -206,7 +206,7 @@ body {
 .hero {
   background-color: rgba(46, 47, 66, 0.7);
   background-image: linear-gradient( rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-                     url("/images/background_people-office.jpg"); 
+                     url("./../images/background_people-office.jpg"); 
   padding: 188px 0 188px;
   max-width: 1440px;
   background-repeat: no-repeat;
